@@ -1,3 +1,11 @@
+2013-09-17  Vanessa Gil <vanessa.gil@artica.es>
+
+	* integria_db.sql
+	  extras/migrate.sql
+	  include/functions_inventories.php
+	  operation/inventories/inventory_search.php: Show inventories
+	without object type in treeview.
+
 2013-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* operation/side_menu.php: Fixed the incident search from
